solve the whitespace wrap problem

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
 
 .searchItem {
 	display: flex;
+	white-space: nowrap;
 }
 
 .searchItem .close{
